[package]
name = "deploy-repos-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["eventbridge"] }

lambda_runtime = "1.0.1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }